--- a/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld.html
+++ b/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld.html
@@ -1,22 +1,10 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Thymeleaf Demo</title>
+  <meta charset="UTF-8">
+  <title>$Title$</title>
 </head>
-
 <body>
-
-Hello World of Spring!
-
-<br><br>
-
-Student name: <span th:text="${param.studentName}" />
-
-<br><br>
-
-The message: <span th:text="${message}" />
-
+$END$
 </body>
-
 </html>
