getting data from spring model

--- a/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld-form.html
+++ b/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld-form.html
@@ -2,18 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Hello World - Input Form</title>
+    <meta charset="UTF-8">
+    <title>Hello World - Input Form</title>
 </head>
 <body>
 
-<form th:action="@{/processFormVersionTwo}" method="GET">
+<form th:action="@{/processFormVersionThree}" method="GET">
 
-  <input type="text" name="studentName"
-         placeholder="What's your name?" />
+    <input type="text" name="studentName"
+           placeholder="What's your name?" />
 
-  <input type="submit" />
+    <input type="submit" />
 
 </form>
 
 </body>
+</html>
