--- a/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld.html
+++ b/dev-spring-tool/07-spring-boot-spring-mvc/01-thymeleafdemo-helloworld - Copy/src/main/resources/templates/helloworld.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Thymeleaf Demo</title>
 </head>
+
 <body>
-$END$
+
+Hello World of Spring!
+
+<br><br>
+
+Student name: <span th:text="${param.studentName}" />
+
+<br><br>
+
+The message: <span th:text="${message}" />
+
 </body>
+
 </html>
